--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 
     {{content-for 'head'}}
 
+    <script src="assets/webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" href="assets/vulcanized.html">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-test.css">
 
